--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -6,7 +6,7 @@ schema:
 dataSources:
   - kind: ethereum/contract
     name: PeaqDid
-    network: agung
+    network: peaq
     source:
       address: "deployed_contract_address"
       abi: PeaqDid
